--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   padding-inline: 23vw;
   .Container {
     height: calc(100% - 15px);
+    width: 100vw;
     padding-top: 15px;
     padding-bottom: 15px;
   }
