--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,22 @@
   background-color: rgba(15, 23, 42, 255);
   color: white;
   padding-inline: 23vw;
+  @media (max-width: 1200px) {
+    padding-inline: 5vw;
+  }
+  @media (max-width: 1350px) {
+    padding-inline: 10vw;
+  }
+  @media (max-width: 910px) {
+    padding-inline: 15px;
+  }
+  @media (max-width: 480px) {
+    padding-inline: 15px;
+    display: flex;
+    justify-content: center;
+  }
   .Container {
     height: calc(100% - 15px);
-    width: 100vw;
     padding-top: 15px;
     padding-bottom: 15px;
   }
