--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -17,30 +17,58 @@
   .ProjectCard {
     margin-top: 20px;
     padding: 15px;
-    width: 100%;
     background-color: #1e293b;
     border-radius: 6px;
     display: flex;
     flex-direction: row;
+    .Image {
+      @media (max-width: 800px) {
+        align-self: center;
+      }
+    }
+    @media (max-width: 720px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
     .ContentContainer {
       padding-left: 20px;
       .ContentHeader {
         display: flex;
         flex-direction: row;
+        @media (max-width: 800px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
         .ContentTitle {
           font-size: 22px;
           font-weight: 500;
+          @media (max-width: 800px) {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 10px;
+          }
         }
-        .TechnologyCard {
-          padding: 1.5px;
-          padding-inline: 5px;
-          background-color: purple;
-          border-radius: 6px;
-          margin-left: 10px;
-          font-size: 14px;
+        .TechnologyCardContainer {
           display: flex;
-          align-items: center;
-          color: black;
+          flex-direction: row;
+          justify-content: center;
+          flex-wrap: wrap;
+          .TechnologyCard {
+            padding: 1.5px;
+            padding-inline: 5px;
+            background-color: purple;
+            border-radius: 6px;
+            margin-left: 10px;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            color: black;
+            @media (max-width: 480px) {
+              margin-bottom: 10px;
+            }
+          }
         }
       }
       .Content {
