--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -23,5 +23,9 @@
   }
   .HeroAvatar {
     height: 35vh;
+    @media (max-width: 650px) {
+      height: 150px;
+      width: 100px;
+    }
   }
 }
